# Carnot-Engine

./: .gitignore  DEPLOYMENT.md  LICENSE  Makefile  README.md  SECURITY.md  WORKLOG.md  pytest.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  policy-gate.yml  tests.yml
COPILOT/: 01_ebpf_correlation.md  02_runtime_to_bom.md  03_moto_tests.md  04_opa_gate.md  05_cloud_run_api.md  06_site_deploy.md  07_stress_test.md  08_attestation_visualization.md  09_assessment_onepager.md  10_worklog_enforcement.md  README.md
api/: Dockerfile  README.md  main.py  requirements.txt
bench/: GOLDEN_DATASET.md
carnot-agent/: README.md
carnot-agent/bpftrace/: handshake.bt  sni.bt
carnot-agent/ebpf-core/: openssl_handshake.bpf.c
carnot-agent/loader-go/: README.md  go.mod  main.go
carnot-attest/: README.md  pyproject.toml
carnot-attest/carnot_attest/: attest.py
carnot-cli/: README.md  pyproject.toml
carnot-cli/carnot/: __main__.py  scan.py
carnot-cli/carnot/schema/: cryptobom.v2.schema.json
carnot-cli/examples/demo-python/: keys.py
carnot-lab/: README.md  docker-compose.yml
carnot-merge/: README.md  pyproject.toml
carnot-merge/carnot_merge/: __main__.py  merge.py
carnot-net/: README.md
carnot-net/scripts/: convert_zeek_to_cryptobom_v21.py  zeek_to_json.py
carnot-proxy/: README.md
carnot-site/: README.md  index.html  style.css
docs/: ASSESSMENT_TEMPLATE.md  EMAIL_OUTREACH.md  POLICY_GUIDE.md  VALIDATION_STEPS.md
docs/matrices/: D.1_ROI_Model_AegisQ_vs_DIY.csv  (+3 more)
policies/: pqc_migration.rego
scripts/: gcloud-run.sh
(+14 files in other folders)
